Use URI.create() instead of new URL() as per jdk20+ deprecation